# streak_finder

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  dev.ipynb  environment.yml  image.npy  pyproject.toml  pytest.ini  requirements.txt  setup.py
streak_finder/: __init__.py  annotations.py  cbc_setup.py  data_container.py  image_lines.py  label.py  ndimage.py  scripts.py  streak_finder.py  test_util.py
streak_finder/_src/: annotations.py  cxi_protocol.py  data_container.py  data_processing.py  label.py  parser.py  scripts.py  streak_finder.py  streaks.py
streak_finder/_src/config/: cxi_protocol.ini
streak_finder/_src/src/: __init__.py  array.hpp  bresenham.cpp  bresenham.hpp  bresenham.pyi  geometry.hpp  include.hpp  index.cpp  index.pyi  label.cpp  label.hpp  label.pyi  median.cpp  median.hpp  median.pyi  signal_proc.cpp  signal_proc.hpp  signal_proc.pyi  streak_finder.cpp  streak_finder.hpp  streak_finder.pyi  zip.hpp
streak_finder/src/: __init__.py  array.hpp  fft_functions.cpp  fft_functions.hpp  fft_functions.pyi  geometry.hpp  image_proc.cpp  image_proc.hpp  image_proc.py  image_proc.pyi  include.hpp  kd_tree.hpp  label.cpp  label.hpp  label.pyi  median.cpp  median.hpp  median.pyi  signal_proc.hpp  streak_finder.cpp  streak_finder.hpp  streak_finder.pyi  zip.hpp
tests/: conftest.py  draw_line_test.py  image_proc_test.py  label_test.py  peaks_and_moments_test.py  streak_finder_test.py  test_streak_finder.py
