[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.6.1",
    "numpy >= 2.1.0"
]
build-backend = "setuptools.build_meta"

[project]
name = 'streak_finder'
authors = [{name = 'Nikolay Ivanov', email = 'nikolay.ivanov@desy.de'}]
description = 'Convergent beam streak finding algorithm'
version = '1.4.3'
dependencies = [
    'h5py',
    'numpy',
    'pandas',
    'pybind11',
    'tqdm'
]
license = {file = 'LICENSE'}
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ['jupyter', 'matplotlib', 'pytest']

[project.urls]
Repository = "https://github.com/simply-nicky/streak_finder"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
